--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Sorting Algorithms</string>
+    <string name="app_name" translatable="false">Sorting Algorithms</string>
+    <string name="title_activity_login" translatable="false">LoginActivity</string>
+    <string name="title_activity_register" translatable="false">RegisterActivity</string>
+    <string name="title_activity_main" translatable="false">MainActivity</string>
 </resources>
