--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_login" translatable="false">LoginActivity</string>
     <string name="title_activity_register" translatable="false">RegisterActivity</string>
     <string name="title_activity_main" translatable="false">MainActivity</string>
+    <string name="title_activity_saved">SavedActivity</string>
 </resources>
